[fix] improved bg contrast

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ html {
 }
 
 .input-form {
-  background: #243757;
+  background: #223757;
   padding: 35px;
   border: 1px solid #586e92;
   border-radius: 5px;
@@ -39,7 +39,7 @@ html {
   margin-bottom: 30px;
   padding: 11px 14px;
   border-radius: 4px;
-  border: 1px solid #243757;
+  border: 1px solid #223757;
   -webkit-box-shadow:inset 0 1px 2px 0 rgba(0,0,0,0.5);
   box-shadow:inset 0 1px 2px 0 rgba(0,0,0,0.5);
   background-color: #f3f3f3;
@@ -101,7 +101,7 @@ html {
 }
 
 .result-single {
-  background: #243757;
+  background: #223757;
   padding: 35px;
   border: 1px solid #586e92;
   border-radius: 5px;
